--- a/src/Components/Pages/OurApp/OurApp.module.css
+++ b/src/Components/Pages/OurApp/OurApp.module.css
@@ -280,38 +280,43 @@
   background-color: var(--color-secondary-900);
   border-radius: 0 0 0 var(--border-radius-lg);
 }
-.maccasContainer__downRow {
+/* .maccasContainer__downRow {
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  
-  /* flex-direction: column;
-  gap: 3rem; */
-  /* background-color: aquamarine; */
+  background-color: aquamarine;
   height: auto;
   width: 100%;
   margin-left: 10rem;
   margin-bottom: 7rem;
   flex-wrap: wrap;
 
+} */
+.maccasContainer__downRow__container{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 100%;
+  margin-bottom: 7rem;
+  margin-left: 10rem; 
 }
-
-
-.maccasContainer__downRow__l1_noCollapsed{
+.maccasContainer__downRow__container_left{
   display: flex;
   align-items: center;
-  justify-content:center;
-  width: 100%;
-  height: auto;
-  background-color: var(--color-primary-900);
-  padding: 2rem 4rem 4rem 4rem;
+  justify-content: center;
   flex-direction: column;
-  border-radius: var(--border-radius-md);
-  /* transition: var(--transition); */
-  /* border: 1px solid greenyellow; */
-  /* transition: cubic-bezier(0.19, 1, 0.22, 1);
-  animation-delay: 10000; */
-  
+  width: 45%;
+  height: auto;
+  padding-left: 7rem;
+}
+.maccasContainer__downRow__container_right{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 45%;
+  height: auto;
+  padding-left: 5rem;
 }
 
 /*************************************** Our jobs ***********************************************/
